--- a/Device Interface Manager/MVVM/View/SettingsView.xaml
+++ b/Device Interface Manager/MVVM/View/SettingsView.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class="Device_Interface_Manager.MVVM.View.SettingsView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:viewModel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" x:Class="Device_Interface_Manager.MVVM.View.SettingsView"
              d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type={x:Type viewModel:SettingsViewModel}}"
              mc:Ignorable="d" 
              d:DesignWidth="1040"
@@ -13,26 +14,16 @@
     <Grid>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top">
             <Button
-                Margin="0,25,0,0"
                 Command="{Binding DiscordCommand}"
-                HorizontalAlignment="Center"
+                Margin="0,25,0,0"
                 Background="Transparent"
                 Cursor="Hand"
-                IsTabStop="False"
-                Height="50">
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="10"/>
-                    </Style>
-                </Button.Resources>
+                IsTabStop="False">
                 <StackPanel Orientation="Horizontal">
                     <Label 
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Center"
                         FontWeight="Bold"
                         FontSize="20"
-                        Foreground="White"
-                        Content="Join us on" 
+                        Content="Join us on"
                         FontFamily="Arial Black"/>
                     <Image
                         Height="25"
@@ -41,12 +32,12 @@
                         Source="pack://application:,,,/Images/small_logo_white_RGB_Discord.png"/>
                 </StackPanel>
             </Button>
-            <TextBlock 
+            <TextBlock
+                Text="{Binding WasmModuleUpdaterMessage}"
                 d:Text="WASM Mesage!"
                 FontSize="23"
                 HorizontalAlignment="Center"
-                Margin="0,50,0,0"
-                Text="{Binding WasmModuleUpdaterMessage}">
+                Margin="0,50,0,0">
                 <TextBlock.Style>
                     <Style TargetType="TextBlock">
                         <Style.Triggers>
@@ -67,18 +58,14 @@
                 </TextBlock.Style>
             </TextBlock>
             <Button
-                Margin="0,10,0,0"
-                Height="35"
                 Command="{Binding InstallUpdateDIMWASModuleCommand}"
-                HorizontalAlignment="Center"
-                Width="320"
-                Foreground="Black"
-                FontFamily="Impact"
+                Content="Install/Update DIM Event Module"
+                Margin="0,10,0,0"
+                FontWeight="Bold"
+                FontSize="18"
                 Cursor="Hand"
                 IsTabStop="False"
-                BorderThickness="0"
-                Content="Install/Update DIM Event Module"
-                FontSize="23"/>
+                mah:ControlsHelper.ContentCharacterCasing="Normal"/>
         </StackPanel>
 
         <Grid Margin="0,200,0,0">
@@ -88,44 +75,33 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock 
-                        Text="Autohide to tray on startup" 
-                        Foreground="White" 
-                        Margin="0,0,0,0"/>
-                    <CheckBox
-                        Cursor="Hand"
-                        Margin="25,0,0,0"
-                        Width="15"
-                        Height="15"
-                        IsTabStop="False"
-                        ToolTip="Software will start directly into the tray and all assigned profiles will start automatically"
-                        IsChecked="{Binding AutoHide}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock 
-                        Text="Hide to tray if minimized" 
-                        Foreground="White" 
-                        Margin="0,25,0,0"/>
-                    <CheckBox
-                        Cursor="Hand"
-                        Margin="38.5,25,0,0"
-                        Width="15"
-                        Height="15"
-                        IsTabStop="False"
-                        ToolTip="Software will minimize to tray"
-                        IsChecked="{Binding MinimizedHide}"/>
-                </StackPanel>
-                <TextBlock
-                    Text="{Binding InterfaceITAPIVersion}"
-                    Foreground="White"
-                    Margin="0,75,0,0"/>
                 <StackPanel.Resources>
                     <Style TargetType="ToolTip">
                         <Setter Property="Background" Value="Black"/>
                         <Setter Property="Foreground" Value="White"/>
                     </Style>
                 </StackPanel.Resources>
+
+                <mah:ToggleSwitch
+                    IsOn="{Binding AutoHide}"
+                    Header="Autohide to tray on startup"
+                    ToolTip="Software will start directly into the tray and all assigned profiles will start automatically."
+                    Cursor="Hand"
+                    IsTabStop="False"/>
+
+                <mah:ToggleSwitch
+                    IsOn="{Binding MinimizedHide}"
+                    Margin="0,20,0,0"
+                    Header="Hide to tray if minimized"
+                    ToolTip="Software will minimize to tray."
+                    Cursor="Hand"
+                    IsTabStop="False"/>
+
+                <TextBlock
+                    Text="{Binding InterfaceITAPIVersion}"
+                    Foreground="White"
+                    Margin="0,75,0,0"/>
+                
             </StackPanel>
 
             <Border
@@ -135,45 +111,24 @@
                 CornerRadius="10"
                 VerticalAlignment="Center"
                 Width="210">
+                
                 <StackPanel Orientation="Vertical">
                     <StackPanel.Resources>
-                        <Style TargetType="TextBox">
-                            <Style.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="10"/>
-                                </Style>
-                            </Style.Resources>
-                            <Setter Property="Height" Value="35"/>
-                            <Setter Property="VerticalAlignment" Value="Top"/>
-                            <Setter Property="HorizontalAlignment" Value="Center"/>
-                            <Setter Property="BorderThickness" Value="3"/>
-                            <Setter Property="Foreground" Value="White"/>
-                            <Setter Property="Background" Value="Transparent"/>
+                        <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
                             <Setter Property="TextAlignment" Value="Center"/>
                             <Setter Property="FontSize" Value="20"/>
-                            <Style.Triggers>
-                                <Trigger Property="IsKeyboardFocusWithin" Value="True">
-                                    <Setter Property="CaretBrush" Value="White"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                        <Style TargetType="Button">
-                            <Style.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="5"/>
-                                </Style>
-                            </Style.Resources>
                         </Style>
                     </StackPanel.Resources>
-                    <Label
+                    
+                    <TextBlock
                         HorizontalAlignment="Center"
                         Foreground="White"
                         FontSize="22"
-                        Content="SimConnect:"/>
+                        Text="SimConnect:"/>
 
                     <TextBox
-                        Margin="0,20,0,0"
                         Text="{Binding IP}"
+                        Margin="0,20,0,0"
                         Width="180">
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="GotFocus">
@@ -183,9 +138,9 @@
                     </TextBox>
 
                     <TextBox
-                       Margin="0,20,0,0"
-                       Width="100"
-                       Text="{Binding Port}">
+                        Text="{Binding Port}"
+                        Margin="0,20,0,0"
+                        Width="100">
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="GotFocus">
                                 <i:InvokeCommandAction Command="{Binding GotIPPortTextBoxFocusCommand}"/>
@@ -198,29 +153,29 @@
                         Content="OK"
                         FontWeight="Bold"
                         FontSize="18"
-                        Height="30"
                         Width="80"
                         Cursor="Hand"
                         Command="{Binding CheckSimConnectConnectionCommand}">
                         <Button.Style>
-                            <Style TargetType="Button">
+                            <Style TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
                                 <Style.Triggers>
-                                    <DataTrigger Binding="{Binding Status}" Value="0">
-                                        <Setter Property="Background" Value="White"/>
-                                    </DataTrigger>
                                     <DataTrigger Binding="{Binding Status}" Value="1">
                                         <Setter Property="Background" Value="Red"/>
+                                        <Setter Property="Foreground" Value="Black"/>
                                     </DataTrigger>
                                     <DataTrigger Binding="{Binding Status}" Value="2">
                                         <Setter Property="Background" Value="Yellow"/>
+                                        <Setter Property="Foreground" Value="Black"/>
                                     </DataTrigger>
                                     <DataTrigger Binding="{Binding Status}" Value="3">
                                         <Setter Property="Background" Value="Green"/>
+                                        <Setter Property="Foreground" Value="Black"/>
                                     </DataTrigger>
                                 </Style.Triggers>
                             </Style>
                         </Button.Style>
                     </Button>
+                    
                 </StackPanel>
             </Border>
         </Grid>
