--- a/Device Interface Manager/Theme/MenuButtonTheme.xaml
+++ b/Device Interface Manager/Theme/MenuButtonTheme.xaml
@@ -21,7 +21,7 @@
                     </ControlTemplate>    
                 </Setter.Value>
             </Setter>
-
+            <Setter Property="FontWeight" Value="Normal"/>
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="IsTabStop" Value="False"/>
@@ -40,6 +40,7 @@
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
                     <Setter Property="Background" Value="#403f4a"/>
+                    <Setter Property="IsTabStop" Value="False"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
         </Style.Triggers>
