--- a/Device Interface Manager/MVVM/View/HomeENETView.xaml
+++ b/Device Interface Manager/MVVM/View/HomeENETView.xaml
@@ -1,12 +1,12 @@
 ﻿<UserControl
+    x:Class="Device_Interface_Manager.MVVM.View.HomeENETView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:local="clr-namespace:Device_Interface_Manager.MVVM.View"
     xmlns:viewModel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
-    x:Class="Device_Interface_Manager.MVVM.View.HomeENETView"
-    d:DataContext="{d:DesignInstance Type=viewModel:HomeENETViewModel, IsDesignTimeCreatable=True}"
+    xmlns:local="clr-namespace:Device_Interface_Manager.MVVM.View"
+    d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type={x:Type viewModel:HomeENETViewModel}}"
     mc:Ignorable="d"
     d:DesignWidth="1040"
     d:DesignHeight="560">
@@ -31,7 +31,7 @@
                 FontSize="23"
                 IsTabStop="False">
                 <Button.Resources>
-                    <Style TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+                    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource MahApps.Styles.Button}">
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsENETEnabled}" Value="True">
                                 <Setter Property="Visibility" Value="Visible"/>
@@ -52,7 +52,7 @@
                 Cursor="Hand"
                 IsTabStop="False">
                 <Button.Resources>
-                    <Style TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+                    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource MahApps.Styles.Button}">
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsENETEnabled}" Value="True">
                                 <Setter Property="Content" Value="Start"/>
@@ -75,7 +75,7 @@
                 Cursor="Hand"
                 IsTabStop="False">
                 <Button.Resources>
-                    <Style TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+                    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource MahApps.Styles.Button}">
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsENETEnabled}" Value="True">
                                 <Setter Property="Visibility" Value="Hidden"/>
@@ -90,7 +90,7 @@
         </StackPanel>
 
         <DockPanel HorizontalAlignment="Center" Grid.Row="1">
-        <DataGrid
+            <DataGrid
                     ItemsSource="{Binding Connections}"
                     d:ItemsSource="{d:SampleData ItemCount=11}"
                     IsEnabled="{Binding IsENETEnabled}"
@@ -105,136 +105,135 @@
                     BorderThickness="5"
                     FontSize="18">
 
-            <DataGrid.Columns>
+                <DataGrid.Columns>
 
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="300">
-                    <DataGridTextColumn.EditingElementStyle>
-                        <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox.DataGrid.Editing}">
-                            <Setter Property="FontSize" Value="18"/>
-                        </Style>
-                    </DataGridTextColumn.EditingElementStyle>
-                </DataGridTextColumn>
+                    <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="300">
+                        <DataGridTextColumn.EditingElementStyle>
+                            <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource MahApps.Styles.TextBox.DataGrid.Editing}">
+                                <Setter Property="FontSize" Value="18"/>
+                            </Style>
+                        </DataGridTextColumn.EditingElementStyle>
+                    </DataGridTextColumn>
 
-                <DataGridTextColumn Header="IP-Address" Binding="{Binding IPAddress}" Width="180">
-                    <DataGridTextColumn.EditingElementStyle>
-                        <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox.DataGrid.Editing}">
-                            <Setter Property="FontSize" Value="18"/>
-                        </Style>
-                    </DataGridTextColumn.EditingElementStyle>
-                </DataGridTextColumn>
+                    <DataGridTextColumn Header="IP-Address" Binding="{Binding IPAddress}" Width="180">
+                        <DataGridTextColumn.EditingElementStyle>
+                            <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource MahApps.Styles.TextBox.DataGrid.Editing}">
+                                <Setter Property="FontSize" Value="18"/>
+                            </Style>
+                        </DataGridTextColumn.EditingElementStyle>
+                    </DataGridTextColumn>
 
-                <DataGridTemplateColumn Header="Status" Width="80" IsReadOnly="True" SortMemberPath="Status">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Ellipse Height="25" Width="25" StrokeThickness="2" Stroke="White">
-                                <Ellipse.Resources>
-                                    <Style TargetType="Ellipse">
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Status}" Value="1">
-                                                <Setter Property="Fill" Value="Red"/>
-                                            </DataTrigger>
-                                            <DataTrigger Binding="{Binding Status}" Value="2">
-                                                <Setter Property="Fill" Value="Yellow"/>
-                                            </DataTrigger>
-                                            <DataTrigger Binding="{Binding Status}" Value="3">
-                                                <Setter Property="Fill" Value="Green"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Ellipse.Resources>
-                            </Ellipse>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                    <DataGridTemplateColumn.CellStyle>
-                        <Style TargetType="DataGridCell" BasedOn="{StaticResource MahApps.Styles.DataGridCell}">
-                            <Setter Property="IsTabStop" Value="False"/>
-                        </Style>
-                    </DataGridTemplateColumn.CellStyle>
-                </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Status" Width="80" IsReadOnly="True" SortMemberPath="Status">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Ellipse Height="25" Width="25" StrokeThickness="2" Stroke="White">
+                                    <Ellipse.Resources>
+                                        <Style TargetType="{x:Type Ellipse}">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Status}" Value="1">
+                                                    <Setter Property="Fill" Value="Red"/>
+                                                </DataTrigger>
+                                                <DataTrigger Binding="{Binding Status}" Value="2">
+                                                    <Setter Property="Fill" Value="Yellow"/>
+                                                </DataTrigger>
+                                                <DataTrigger Binding="{Binding Status}" Value="3">
+                                                    <Setter Property="Fill" Value="Green"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Ellipse.Resources>
+                                </Ellipse>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                        <DataGridTemplateColumn.CellStyle>
+                            <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource MahApps.Styles.DataGridCell}">
+                                <Setter Property="IsTabStop" Value="False"/>
+                            </Style>
+                        </DataGridTemplateColumn.CellStyle>
+                    </DataGridTemplateColumn>
 
-                <DataGridTemplateColumn Header="Select Profile" Width="350" IsReadOnly="True" SortMemberPath="SelectedProfile">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <ComboBox
-                                        ItemsSource="{Binding DataContext.Profiles, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HomeENETView}}}"
+                    <DataGridTemplateColumn Header="Select Profile" Width="350" IsReadOnly="True" SortMemberPath="SelectedProfile">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <ComboBox
+                                        ItemsSource="{Binding DataContext.Profiles, RelativeSource={RelativeSource FindAncestor, AncestorType=local:HomeENETView}}"
                                         SelectedItem="{Binding SelectedProfile, UpdateSourceTrigger=PropertyChanged}"
                                         FontSize="18"
                                         BorderThickness="0"
                                         Background="Transparent"
                                         Cursor="Hand">
-                                <ComboBox.ItemContainerStyle>
-                                    <Style TargetType="ComboBoxItem" BasedOn="{StaticResource MahApps.Styles.ComboBoxItem}">
-                                        <Setter Property="Cursor" Value="Hand"/>
-                                    </Style>
-                                </ComboBox.ItemContainerStyle>
-                            </ComboBox>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                    <DataGridTemplateColumn.CellStyle>
-                        <Style TargetType="DataGridCell" BasedOn="{StaticResource MahApps.Styles.DataGridCell}">
-                            <Setter Property="IsTabStop" Value="False"/>
-                        </Style>
-                    </DataGridTemplateColumn.CellStyle>
-                </DataGridTemplateColumn>
+                                    <ComboBox.ItemContainerStyle>
+                                        <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource MahApps.Styles.ComboBoxItem}">
+                                            <Setter Property="Cursor" Value="Hand"/>
+                                        </Style>
+                                    </ComboBox.ItemContainerStyle>
+                                </ComboBox>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                        <DataGridTemplateColumn.CellStyle>
+                            <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource MahApps.Styles.DataGridCell}">
+                                <Setter Property="IsTabStop" Value="False"/>
+                            </Style>
+                        </DataGridTemplateColumn.CellStyle>
+                    </DataGridTemplateColumn>
 
-                <DataGridTemplateColumn Header="Delete" Width="80" IsReadOnly="True">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button
-                                        Command="{Binding DataContext.DeleteRowCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HomeENETView}}}" 
+                    <DataGridTemplateColumn Header="Delete" Width="80" IsReadOnly="True">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button
+                                        Command="{Binding DataContext.DeleteRowCommand, RelativeSource={RelativeSource AncestorType=local:HomeENETView, Mode=FindAncestor}}" 
                                         CommandParameter="{Binding}"
                                         Content="🗙︎"
                                         Cursor="Hand">
-                                <Button.Resources>
-                                    <Style TargetType="Button">
-                                        <Setter Property="Background" Value="Transparent"/>
-                                        <Setter Property="Template">
-                                            <Setter.Value>
-                                                <ControlTemplate TargetType="Button">
-                                                    <Border
+                                    <Button.Resources>
+                                        <Style TargetType="{x:Type Button}">
+                                            <Setter Property="Background" Value="Transparent"/>
+                                            <Setter Property="Template">
+                                                <Setter.Value>
+                                                    <ControlTemplate TargetType="{x:Type Button}">
+                                                        <Border
                                                                 Background="{TemplateBinding Background}">
-                                                        <ContentPresenter Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                                    </Border>
-                                                </ControlTemplate>
-                                            </Setter.Value>
-                                        </Setter>
-                                        <Style.Triggers>
-                                            <Trigger Property="IsMouseOver" Value="True">
-                                                <Setter Property="Background" Value="Red"/>
-                                            </Trigger>
-                                            <Trigger Property="IsFocused" Value="True">
-                                                <Setter Property="Background" Value="Red"/>
-                                            </Trigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Button.Resources>
-                            </Button>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                    <DataGridTemplateColumn.CellStyle>
-                        <Style TargetType="DataGridCell">
-                            <Setter Property="IsTabStop" Value="False"/>
-                            <Setter Property="Background" Value="Transparent"/>
-                            <Setter Property="BorderThickness" Value="0"/>
-                        </Style>
-                    </DataGridTemplateColumn.CellStyle>
-                </DataGridTemplateColumn>
+                                                            <ContentPresenter Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                                        </Border>
+                                                    </ControlTemplate>
+                                                </Setter.Value>
+                                            </Setter>
+                                            <Style.Triggers>
+                                                <Trigger Property="IsMouseOver" Value="True">
+                                                    <Setter Property="Background" Value="Red"/>
+                                                </Trigger>
+                                                <Trigger Property="IsFocused" Value="True">
+                                                    <Setter Property="Background" Value="Red"/>
+                                                </Trigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                        <DataGridTemplateColumn.CellStyle>
+                            <Style TargetType="{x:Type DataGridCell}">
+                                <Setter Property="IsTabStop" Value="False"/>
+                                <Setter Property="Background" Value="Transparent"/>
+                                <Setter Property="BorderThickness" Value="0"/>
+                            </Style>
+                        </DataGridTemplateColumn.CellStyle>
+                    </DataGridTemplateColumn>
 
-            </DataGrid.Columns>
-        </DataGrid>
+                </DataGrid.Columns>
+            </DataGrid>
 
-        <Button
+            <Button
                 Command="{Binding AddRowCommand}"
-                Visibility="{Binding IsENETEnabled,Converter={StaticResource BooleanToVisibilityConverter}}"
+                Visibility="{Binding IsENETEnabled, Converter={StaticResource BooleanToVisibilityConverter}}"
                 Margin="0,-40,0,0"
                 Grid.Row="1"
                 VerticalAlignment="Top"
                 Cursor="Hand"
                 FontSize="16"
                 Content="Add"
-                IsTabStop="False">
-        </Button>
-    </DockPanel>
+                IsTabStop="False"/>
+        </DockPanel>
     </Grid>
 
 </UserControl>
