--- a/Device Interface Manager/MVVM/View/HomeUSBView.xaml
+++ b/Device Interface Manager/MVVM/View/HomeUSBView.xaml
@@ -1,11 +1,11 @@
 ﻿<UserControl
+    x:Class="Device_Interface_Manager.MVVM.View.HomeUSBView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:local="clr-namespace:Device_Interface_Manager.MVVM.View"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:viewModel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
-    x:Class="Device_Interface_Manager.MVVM.View.HomeUSBView"
+    xmlns:local="clr-namespace:Device_Interface_Manager.MVVM.View"
     d:DataContext="{d:DesignInstance Type=viewModel:HomeUSBViewModel, IsDesignTimeCreatable=True}"
     mc:Ignorable="d"
     d:DesignWidth="1040"
@@ -35,7 +35,7 @@
                     VerticalAlignment="Top"
                     HorizontalAlignment="Center"
                     Text="Board information"/>
-                
+
                 <Border
                     Margin="0,10,0,0"
                     BorderBrush="DodgerBlue"
@@ -45,15 +45,15 @@
                     Background="Transparent">
                     <Grid>
                         <ListView
-                        Margin="5"
-                        Background="Transparent"
-                        Foreground="White"
-                        FontSize="15"
-                        BorderThickness="0"
-                        Height="250"
-                        ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                        ScrollViewer.VerticalScrollBarVisibility="Disabled"
-                        ItemsSource="{Binding BoardInfo}">
+                            Margin="5"
+                            Background="Transparent"
+                            Foreground="White"
+                            FontSize="15"
+                            BorderThickness="0"
+                            Height="250"
+                            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                            ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                            ItemsSource="{Binding BoardInfo}">
                             <ListView.ItemContainerStyle>
                                 <Style TargetType="ListViewItem">
                                     <Setter Property="Focusable" Value="False"/>
@@ -72,7 +72,7 @@
                     </Grid>
                 </Border>
             </StackPanel>
-            
+
             <ListView 
                 Grid.Column="1"
                 Background="Transparent"
@@ -115,10 +115,10 @@
                 <RowDefinition Height="45"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            
+
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
 
-                <Button 
+                <Button
                     Command="{Binding StartUSBCommand}"
                     FontSize="23"
                     Width="150"
@@ -138,7 +138,7 @@
                         </Style>
                     </Button.Resources>
                 </Button>
-                
+
                 <Button 
                     Command="{Binding ResetUSBScreensCommand}"
                     d:Visibility="Visible"
@@ -179,7 +179,7 @@
                     FontSize="18">
 
                     <DataGrid.Columns>
-                        
+
                         <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="300">
                             <DataGridTextColumn.EditingElementStyle>
                                 <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox.DataGrid.Editing}">
@@ -187,7 +187,7 @@
                                 </Style>
                             </DataGridTextColumn.EditingElementStyle>
                         </DataGridTextColumn>
-                        
+
                         <DataGridTextColumn Header="Serial" Binding="{Binding Serial, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="180">
                             <DataGridTextColumn.ElementStyle>
                                 <Style TargetType="TextBlock" BasedOn="{StaticResource MahApps.Styles.TextBlock.DataGrid}">
@@ -201,12 +201,12 @@
                                 </Style>
                             </DataGridTextColumn.EditingElementStyle>
                         </DataGridTextColumn>
-                        
+
                         <DataGridTemplateColumn Header="Select Profile" Width="350" IsReadOnly="True" SortMemberPath="SelectedProfile">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <ComboBox
-                                        ItemsSource="{Binding DataContext.Profiles, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HomeUSBView}}}"
+                                        ItemsSource="{Binding DataContext.Profiles, RelativeSource={RelativeSource FindAncestor, AncestorType=local:HomeUSBView}}"
                                         SelectedItem="{Binding SelectedProfile, UpdateSourceTrigger=PropertyChanged}"
                                         FontSize="18"
                                         BorderThickness="0"
@@ -231,7 +231,7 @@
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Button
-                                        Command="{Binding DataContext.DeleteRowCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HomeUSBView}}}" 
+                                        Command="{Binding DataContext.DeleteRowCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=local:HomeUSBView}}" 
                                         CommandParameter="{Binding}"
                                         Content="🗙︎"
                                         Cursor="Hand">
@@ -269,10 +269,10 @@
                                 </Style>
                             </DataGridTemplateColumn.CellStyle>
                         </DataGridTemplateColumn>
-                        
+
                     </DataGrid.Columns>
                 </DataGrid>
-                
+
                 <Button
                     Command="{Binding AddRowCommand}"
                     Visibility="{Binding IsUSBEnabled,Converter={StaticResource BooleanToVisibilityConverter}}"
@@ -284,7 +284,7 @@
                     Content="Add"
                     IsTabStop="False">
                 </Button>
-                
+
             </DockPanel>
         </Grid>
     </Grid>
