--- a/Device Interface Manager/MVVM/View/OldProfileCreator.xaml
+++ b/Device Interface Manager/MVVM/View/OldProfileCreator.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Device_Interface_Manager.MVVM.View.ProfileCreator"
+﻿<Window x:Class="Device_Interface_Manager.MVVM.View.OldProfileCreator"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -16,7 +16,7 @@
         Background="Transparent">
 
     <Window.DataContext>
-        <local:ProfileCreator/>
+        <local:OldProfileCreator/>
     </Window.DataContext>
 
     <Border
