--- a/Device Interface Manager/MVVM/View/PMDG737CDU.xaml
+++ b/Device Interface Manager/MVVM/View/PMDG737CDU.xaml
@@ -1,18 +1,19 @@
-﻿<Window x:Class="Device_Interface_Manager.MVVM.View.PMDG737CDU"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Background="Black"
-        WindowStyle="None"
-        Height="770"
-        Width="830"
-        AllowsTransparency="True"
-        MouseDown="Window_MouseDown"
-        MouseDoubleClick="Window_MouseDoubleClick"
-        MouseRightButtonDown="Window_MouseRightButtonDown"
-        KeyDown="Window_KeyDown">
+﻿<Window
+    x:Class="Device_Interface_Manager.MVVM.View.PMDG737CDU"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    Background="Black"
+    WindowStyle="None"
+    Height="770"
+    Width="830"
+    AllowsTransparency="True"
+    MouseDown="Window_MouseDown"
+    MouseDoubleClick="Window_MouseDoubleClick"
+    MouseRightButtonDown="Window_MouseRightButtonDown"
+    KeyDown="Window_KeyDown">
 
     <WindowChrome.WindowChrome>
         <WindowChrome ResizeBorderThickness="2"/>
