--- a/Device Interface Manager/MVVM/View/SettingsView.xaml
+++ b/Device Interface Manager/MVVM/View/SettingsView.xaml
@@ -1,15 +1,16 @@
 ﻿<UserControl
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:viewModel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
-             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" x:Class="Device_Interface_Manager.MVVM.View.SettingsView"
-             d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type={x:Type viewModel:SettingsViewModel}}"
-             mc:Ignorable="d" 
-             d:DesignWidth="1040"
-             d:DesignHeight="560">
+    x:Class="Device_Interface_Manager.MVVM.View.SettingsView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:viewModel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+    mc:Ignorable="d" 
+    d:DataContext="{d:DesignInstance Type=viewModel:SettingsViewModel, IsDesignTimeCreatable=True}"
+    d:DesignWidth="1040"
+    d:DesignHeight="560">
 
     <Grid>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -20,10 +21,10 @@
                 Cursor="Hand"
                 IsTabStop="False">
                 <StackPanel Orientation="Horizontal">
-                    <Label 
+                    <TextBlock 
                         FontWeight="Bold"
-                        FontSize="20"
-                        Content="Join us on"
+                        FontSize="22"
+                        Text="Join us on"
                         FontFamily="Arial Black"/>
                     <Image
                         Height="25"
