--- a/Device Interface Manager/MVVM/View/SwitchTestView.xaml
+++ b/Device Interface Manager/MVVM/View/SwitchTestView.xaml
@@ -1,13 +1,14 @@
-﻿<UserControl x:Class="Device_Interface_Manager.MVVM.View.SwitchTestView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             d:DataContext="{d:DesignInstance Type=viewModel:SwitchTestViewModel, IsDesignTimeCreatable=True}"
-             xmlns:viewModel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
-             mc:Ignorable="d"
-             d:DesignWidth="1040"
-             d:DesignHeight="560">
+﻿<UserControl
+    x:Class="Device_Interface_Manager.MVVM.View.SwitchTestView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:viewModel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
+    mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance Type=viewModel:SwitchTestViewModel, IsDesignTimeCreatable=True}"
+    d:DesignWidth="1040"
+    d:DesignHeight="560">
 
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
