--- a/Device Interface Manager/MVVM/View/TestENETView.xaml
+++ b/Device Interface Manager/MVVM/View/TestENETView.xaml
@@ -1,16 +1,17 @@
-﻿<UserControl x:Class="Device_Interface_Manager.MVVM.View.TestENETView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:viewmodel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
-             xmlns:local="clr-namespace:Device_Interface_Manager.Core"
-             mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance Type=viewmodel:TestENETViewModel}"
-             d:DesignWidth="1040"
-             d:DesignHeight="560"
-             FontFamily="Unispace"
-             FontSize="11">
+﻿<UserControl
+    x:Class="Device_Interface_Manager.MVVM.View.TestENETView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:viewmodel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
+    xmlns:core="clr-namespace:Device_Interface_Manager.Core"
+    mc:Ignorable="d" 
+    d:DataContext="{d:DesignInstance Type=viewmodel:TestENETViewModel}"
+    d:DesignWidth="1040"
+    d:DesignHeight="560"
+    FontFamily="Unispace"
+    FontSize="11">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -113,7 +114,7 @@
                         </StackPanel>
                     </DockPanel>
                     <Grid.Resources>
-                        <local:ToggleButtonConverter x:Key="ToggleButtonConverter"/>
+                        <core:ToggleButtonConverter x:Key="ToggleButtonConverter"/>
                         <Style TargetType="ToggleButton">
                             <Setter Property="Template">
                                 <Setter.Value>
@@ -401,7 +402,7 @@
     </Grid>
 
     <UserControl.Resources>
-        <local:IntegerToColorConverter x:Key="IntegerToColorConverter"/>
+        <core:IntegerToColorConverter x:Key="IntegerToColorConverter"/>
 
         <Style TargetType="Label">
             <Setter Property="Foreground" Value="White"/>
